force-app/main/default/objects/Lead_Route_Observe_Snapshot__c/Lead_Route_Observe_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Loop2 Observe snapshot - captures routing outcome observation</description>
    <label>Lead Route Observe Snapshot</label>
    <nameField>
        <label>Lead Route Observe Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Route Observe Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>