force-app/main/default/objects/Lead_Route_Observe_Snapshot__c/fields/Days_In_Window__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Window__c</fullName>
    <label>Days In Window</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>