force-app/main/default/objects/Lead_Route_Observe_Snapshot__c/fields/Observe_Reason__c.field-meta.xml
<CustomField>
    <fullName>Observe_Reason__c</fullName>
    <label>Observe Reason</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>