force-app/main/default/objects/Lead_Route_Observe_Snapshot__c/fields/Observe_Verdict__c.field-meta.xml
<CustomField>
    <fullName>Observe_Verdict__c</fullName>
    <label>Observe Verdict</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Decision Confirmed</fullName><default>false</default></value>
            <value><fullName>Decision Overturned</fullName><default>false</default></value>
            <value><fullName>Still In Window</fullName><default>false</default></value>
            <value><fullName>Inconclusive</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>