force-app/main/default/objects/Lead_Route_Observe_Snapshot__c/fields/Route_Act_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Route_Act_Snapshot__c</fullName>
    <label>Route Act Snapshot</label>
    <type>Lookup</type>
    <referenceTo>Lead_Route_Act_Snapshot__c</referenceTo>
    <relationshipLabel>Route Observe Snapshots</relationshipLabel>
    <relationshipName>Route_Observe_Snapshots</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>