force-app/main/default/objects/Lead_Route_Observe_Snapshot__c/fields/Routing_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Routing_Confirmed__c</fullName>
    <label>Routing Confirmed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>